@@ -19,7 +19,6 @@
 package org.apache.pinot.core.operator.filter;
 
 import com.google.common.base.CaseFormat;
-import java.util.Collections;
 import java.util.List;
 import org.apache.pinot.common.request.context.predicate.Predicate;
 import org.apache.pinot.core.common.BlockDocIdSet;
@@ -55,11 +54,21 @@ public class RangeIndexBasedFilterOperator extends BaseColumnFilterOperator {
   private final PredicateEvaluator _predicateEvaluator;
   private final FieldSpec.DataType _parameterType;
 
-  static boolean canEvaluate(PredicateEvaluator predicateEvaluator, DataSource dataSource) {
-    Predicate.Type type = predicateEvaluator.getPredicateType();
+  public static boolean canEvaluate(PredicateEvaluator predicateEvaluator, DataSource dataSource) {
     RangeIndexReader<?> rangeIndex = dataSource.getRangeIndex();
-    return rangeIndex != null && (type == Predicate.Type.RANGE || (type == Predicate.Type.EQ
-        && dataSource.getRangeIndex().isExact()));
+    if (rangeIndex == null) {
+      return false;
+    }
+    // Range-index format mirrors the column's dictionary state at index build/rebuild time: if the
+    // dictionary exists the range stores dict IDs (RangeIndexCreator/BitSlicedRangeIndexCreator both
+    // switch on hasDictionary), so the evaluator must also be dict-based to compare against the index.
+    // Dropping into this operator with a raw-value evaluator on a dict-built range silently returns
+    // wrong matches (raw values compared against dict IDs); fall through to scan instead.
+    if (dataSource.getDictionary() != null && !predicateEvaluator.isDictionaryBased()) {
+      return false;
+    }
+    Predicate.Type type = predicateEvaluator.getPredicateType();
+    return type == Predicate.Type.RANGE || (type == Predicate.Type.EQ && rangeIndex.isExact());
   }
 
   @SuppressWarnings("unchecked")
@@ -173,8 +182,41 @@ public class RangeIndexBasedFilterOperator extends BaseColumnFilterOperator {
     return _rangeIndexReader.isExact();
   }
 
+  /// The index counts the documents whose stored value satisfies the predicate. A null row stores the column's default
+  /// null value, so the null rows are either all among those documents or all outside them, depending on whether that
+  /// value satisfies the predicate: the index's count is kept, and the null rows are subtracted when it does.
   @Override
   public int getNumMatchingDocs() {
+    int numMatchingDocs = getNumMatchingDocsFromIndex();
+    ImmutableRoaringBitmap nullBitmap = getNullBitmap();
+    if (nullBitmap != null && matchesDefaultNullValue()) {
+      numMatchingDocs -= nullBitmap.getCardinality();
+    }
+    return numMatchingDocs;
+  }
+
+  /// Returns whether the predicate holds for the column's default null value, the value a null row is stored under.
+  private boolean matchesDefaultNullValue() {
+    Object defaultNullValue = _dataSource.getDataSourceMetadata().getFieldSpec().getDefaultNullValue();
+    if (_predicateEvaluator.isDictionaryBased()) {
+      int dictId = _dataSource.getDictionary().indexOf(FieldSpec.getStringValue(defaultNullValue));
+      return dictId >= 0 && _predicateEvaluator.applySV(dictId);
+    }
+    switch (_parameterType) {
+      case INT:
+        return _predicateEvaluator.applySV(((Number) defaultNullValue).intValue());
+      case LONG:
+        return _predicateEvaluator.applySV(((Number) defaultNullValue).longValue());
+      case FLOAT:
+        return _predicateEvaluator.applySV(((Number) defaultNullValue).floatValue());
+      case DOUBLE:
+        return _predicateEvaluator.applySV(((Number) defaultNullValue).doubleValue());
+      default:
+        throw unsupportedDataType(_parameterType);
+    }
+  }
+
+  private int getNumMatchingDocsFromIndex() {
     switch (_parameterType) {
       case INT:
         if (_predicateEvaluator instanceof IntValue) {
@@ -216,12 +258,12 @@ public class RangeIndexBasedFilterOperator extends BaseColumnFilterOperator {
 
   @Override
   public BitmapCollection getBitmaps() {
-    return new BitmapCollection(_numDocs, false, getMatchingDocIds());
+    return new BitmapCollection(_numDocs, false, getMatchingDocIds()).excludingNulls(getNullBitmap());
   }
 
   @Override
   public List<Operator> getChildOperators() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
