@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.core.operator.query;
 
-import java.util.Collections;
 import java.util.List;
 import javax.annotation.Nullable;
 import org.apache.pinot.common.request.context.OrderByExpressionContext;
@@ -40,12 +39,10 @@ import org.apache.pinot.core.query.request.context.QueryContext;
 import org.apache.pinot.segment.spi.datasource.DataSource;
 import org.apache.pinot.segment.spi.datasource.DataSourceMetadata;
 import org.apache.pinot.segment.spi.index.reader.Dictionary;
-import org.apache.pinot.spi.trace.Tracing;
+import org.apache.pinot.spi.query.QueryThreadContext;
 
 
-/**
- * Operator which executes DISTINCT operation based on dictionary
- */
+/// Operator which executes DISTINCT operation based on dictionary
 public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResultsBlock> {
   private static final String EXPLAIN_NAME = "DISTINCT_DICTIONARY";
 
@@ -110,7 +107,7 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
         new IntDistinctTable(dataSchema, limit, _queryContext.isNullHandlingEnabled(), orderByExpression);
     if (orderByExpression == null) {
       for (int i = 0; i < numValuesToKeep; i++) {
-        Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+        QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
         distinctTable.addUnbounded(dictionary.getIntValue(i));
       }
       _numDocsScanned = numValuesToKeep;
@@ -118,20 +115,20 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
       if (dictionary.isSorted()) {
         if (orderByExpression.isAsc()) {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getIntValue(i));
           }
           _numDocsScanned = numValuesToKeep;
         } else {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getIntValue(dictLength - 1 - i));
           }
           _numDocsScanned = numValuesToKeep;
         }
       } else {
         for (int i = 0; i < dictLength; i++) {
-          Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+          QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
           distinctTable.addWithOrderBy(dictionary.getIntValue(i));
         }
         _numDocsScanned = dictLength;
@@ -149,7 +146,7 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
         new LongDistinctTable(dataSchema, limit, _queryContext.isNullHandlingEnabled(), orderByExpression);
     if (orderByExpression == null) {
       for (int i = 0; i < numValuesToKeep; i++) {
-        Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+        QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
         distinctTable.addUnbounded(dictionary.getLongValue(i));
       }
       _numDocsScanned = numValuesToKeep;
@@ -157,20 +154,20 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
       if (dictionary.isSorted()) {
         if (orderByExpression.isAsc()) {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getLongValue(i));
           }
           _numDocsScanned = numValuesToKeep;
         } else {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getLongValue(dictLength - 1 - i));
           }
           _numDocsScanned = numValuesToKeep;
         }
       } else {
         for (int i = 0; i < dictLength; i++) {
-          Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+          QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
           distinctTable.addWithOrderBy(dictionary.getLongValue(i));
         }
         _numDocsScanned = dictLength;
@@ -188,7 +185,7 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
         new FloatDistinctTable(dataSchema, limit, _queryContext.isNullHandlingEnabled(), orderByExpression);
     if (orderByExpression == null) {
       for (int i = 0; i < numValuesToKeep; i++) {
-        Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+        QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
         distinctTable.addUnbounded(dictionary.getFloatValue(i));
       }
       _numDocsScanned = numValuesToKeep;
@@ -196,20 +193,20 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
       if (dictionary.isSorted()) {
         if (orderByExpression.isAsc()) {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getFloatValue(i));
           }
           _numDocsScanned = numValuesToKeep;
         } else {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getFloatValue(dictLength - 1 - i));
           }
           _numDocsScanned = numValuesToKeep;
         }
       } else {
         for (int i = 0; i < dictLength; i++) {
-          Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+          QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
           distinctTable.addWithOrderBy(dictionary.getFloatValue(i));
         }
         _numDocsScanned = dictLength;
@@ -227,7 +224,7 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
         new DoubleDistinctTable(dataSchema, limit, _queryContext.isNullHandlingEnabled(), orderByExpression);
     if (orderByExpression == null) {
       for (int i = 0; i < numValuesToKeep; i++) {
-        Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+        QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
         distinctTable.addUnbounded(dictionary.getDoubleValue(i));
       }
       _numDocsScanned = numValuesToKeep;
@@ -235,20 +232,20 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
       if (dictionary.isSorted()) {
         if (orderByExpression.isAsc()) {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getDoubleValue(i));
           }
           _numDocsScanned = numValuesToKeep;
         } else {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getDoubleValue(dictLength - 1 - i));
           }
           _numDocsScanned = numValuesToKeep;
         }
       } else {
         for (int i = 0; i < dictLength; i++) {
-          Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+          QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
           distinctTable.addWithOrderBy(dictionary.getDoubleValue(i));
         }
         _numDocsScanned = dictLength;
@@ -266,7 +263,7 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
         new BigDecimalDistinctTable(dataSchema, limit, _queryContext.isNullHandlingEnabled(), orderByExpression);
     if (orderByExpression == null) {
       for (int i = 0; i < numValuesToKeep; i++) {
-        Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+        QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
         distinctTable.addUnbounded(dictionary.getBigDecimalValue(i));
       }
       _numDocsScanned = numValuesToKeep;
@@ -274,20 +271,20 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
       if (dictionary.isSorted()) {
         if (orderByExpression.isAsc()) {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getBigDecimalValue(i));
           }
           _numDocsScanned = numValuesToKeep;
         } else {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getBigDecimalValue(dictLength - 1 - i));
           }
           _numDocsScanned = numValuesToKeep;
         }
       } else {
         for (int i = 0; i < dictLength; i++) {
-          Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+          QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
           distinctTable.addWithOrderBy(dictionary.getBigDecimalValue(i));
         }
         _numDocsScanned = dictLength;
@@ -305,7 +302,7 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
         new StringDistinctTable(dataSchema, limit, _queryContext.isNullHandlingEnabled(), orderByExpression);
     if (orderByExpression == null) {
       for (int i = 0; i < numValuesToKeep; i++) {
-        Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+        QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
         distinctTable.addUnbounded(dictionary.getStringValue(i));
       }
       _numDocsScanned = numValuesToKeep;
@@ -313,20 +310,20 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
       if (dictionary.isSorted()) {
         if (orderByExpression.isAsc()) {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getStringValue(i));
           }
           _numDocsScanned = numValuesToKeep;
         } else {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getStringValue(dictLength - 1 - i));
           }
           _numDocsScanned = numValuesToKeep;
         }
       } else {
         for (int i = 0; i < dictLength; i++) {
-          Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+          QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
           distinctTable.addWithOrderBy(dictionary.getStringValue(i));
         }
         _numDocsScanned = dictLength;
@@ -344,7 +341,7 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
         new BytesDistinctTable(dataSchema, limit, _queryContext.isNullHandlingEnabled(), orderByExpression);
     if (orderByExpression == null) {
       for (int i = 0; i < numValuesToKeep; i++) {
-        Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+        QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
         distinctTable.addUnbounded(dictionary.getByteArrayValue(i));
       }
       _numDocsScanned = numValuesToKeep;
@@ -352,20 +349,20 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
       if (dictionary.isSorted()) {
         if (orderByExpression.isAsc()) {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getByteArrayValue(i));
           }
           _numDocsScanned = numValuesToKeep;
         } else {
           for (int i = 0; i < numValuesToKeep; i++) {
-            Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+            QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
             distinctTable.addUnbounded(dictionary.getByteArrayValue(dictLength - 1 - i));
           }
           _numDocsScanned = numValuesToKeep;
         }
       } else {
         for (int i = 0; i < dictLength; i++) {
-          Tracing.ThreadAccountantOps.sampleAndCheckInterruptionPeriodically(i);
+          QueryThreadContext.checkTerminationAndSampleUsagePeriodically(i, EXPLAIN_NAME);
           distinctTable.addWithOrderBy(dictionary.getByteArrayValue(i));
         }
         _numDocsScanned = dictLength;
@@ -381,7 +378,7 @@ public class DictionaryBasedDistinctOperator extends BaseOperator<DistinctResult
 
   @Override
   public List<Operator> getChildOperators() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
