@@ -19,7 +19,6 @@
 package org.apache.pinot.core.operator.timeseries;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -40,7 +39,7 @@ public class TimeSeriesOperatorUtils {
   }
 
   public static TimeSeriesBlock buildTimeSeriesBlock(TimeBuckets timeBuckets,
-      GroupByResultsBlock groupByResultsBlock) {
+      GroupByResultsBlock groupByResultsBlock, Map<String, String> responseMetadata) {
     if (groupByResultsBlock.getNumRows() == 0) {
       return new TimeSeriesBlock(timeBuckets, new HashMap<>());
     }
@@ -62,21 +61,21 @@ public class TimeSeriesOperatorUtils {
       timeSeriesList.add(seriesBuilder.buildWithTagOverrides(tagNames, tagValues));
       timeSeriesMap.put(seriesHash, timeSeriesList);
     }
-    return new TimeSeriesBlock(timeBuckets, timeSeriesMap);
+    return new TimeSeriesBlock(timeBuckets, timeSeriesMap, responseMetadata);
   }
 
   public static TimeSeriesBlock buildTimeSeriesBlock(TimeBuckets timeBuckets,
-      AggregationResultsBlock aggregationResultsBlock) {
+      AggregationResultsBlock aggregationResultsBlock, Map<String, String> responseMetadata) {
     if (aggregationResultsBlock.getResults() == null) {
       return new TimeSeriesBlock(timeBuckets, new HashMap<>());
     }
     BaseTimeSeriesBuilder seriesBuilder = (BaseTimeSeriesBuilder) aggregationResultsBlock.getResults().get(0);
     long seriesHash = TimeSeries.hash(new Object[0]);
     List<TimeSeries> timeSeriesList = new ArrayList<>(1);
-    timeSeriesList.add(seriesBuilder.buildWithTagOverrides(Collections.emptyList(), new Object[]{}));
+    timeSeriesList.add(seriesBuilder.buildWithTagOverrides(List.of(), new Object[]{}));
     Map<Long, List<TimeSeries>> timeSeriesMap = new HashMap<>();
     timeSeriesMap.put(seriesHash, timeSeriesList);
-    return new TimeSeriesBlock(timeBuckets, timeSeriesMap);
+    return new TimeSeriesBlock(timeBuckets, timeSeriesMap, responseMetadata);
   }
 
   private static List<String> getTagNamesFromDataSchema(DataSchema dataSchema) {
