@@ -20,7 +20,6 @@ package org.apache.pinot.core.operator.transform;
 
 import com.google.common.base.CaseFormat;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -40,9 +39,7 @@ import org.apache.pinot.core.query.request.context.QueryContext;
 import org.apache.pinot.spi.trace.Tracing;
 
 
-/**
- * Class for evaluating transform expressions.
- */
+/// Class for evaluating transform expressions.
 public class TransformOperator extends BaseProjectOperator<TransformBlock> {
   private static final String EXPLAIN_NAME = "TRANSFORM";
 
@@ -58,6 +55,13 @@ public class TransformOperator extends BaseProjectOperator<TransformBlock> {
           TransformFunctionFactory.get(expression, projectOperator.getSourceColumnContextMap(), queryContext);
       _transformFunctionMap.put(expression, transformFunction);
     }
+  }
+
+  private TransformOperator(
+      BaseProjectOperator<?> projectOperator,
+      Map<ExpressionContext, TransformFunction> transformFunctionMap) {
+    _projectOperator = projectOperator;
+    _transformFunctionMap = transformFunctionMap;
   }
 
   @Override
@@ -103,11 +107,21 @@ public class TransformOperator extends BaseProjectOperator<TransformBlock> {
 
   @Override
   public List<BaseProjectOperator<?>> getChildOperators() {
-    return Collections.singletonList(_projectOperator);
+    return List.of(_projectOperator);
   }
 
   @Override
   public ExecutionStatistics getExecutionStatistics() {
     return _projectOperator.getExecutionStatistics();
+  }
+
+  @Override
+  public boolean isCompatibleWith(DocIdOrder order) {
+    return _projectOperator.isCompatibleWith(order);
+  }
+
+  @Override
+  public BaseProjectOperator<TransformBlock> withOrder(DocIdOrder newOrder) {
+    return new TransformOperator(_projectOperator.withOrder(newOrder), _transformFunctionMap);
   }
 }
