@@ -24,7 +24,6 @@ import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import org.apache.pinot.common.datablock.DataBlock;
 import org.apache.pinot.common.datablock.DataBlockEquals;
@@ -35,6 +34,7 @@ import org.apache.pinot.core.query.aggregation.utils.ParentAggregationFunctionRe
 import org.apache.pinot.segment.spi.memory.CompoundDataBuffer;
 
 
+@SuppressWarnings("rawtypes")
 public class ExprMinMaxObject implements ParentAggregationFunctionResultObject {
 
   // if the object is created but not yet populated, this happens e.g. when a server has no data for
@@ -127,12 +127,12 @@ public class ExprMinMaxObject implements ParentAggregationFunctionResultObject {
     if (_isNull) {
       // serialize the null object with schemas
       header = ObjectNullState.NULL.getState();
-      _immutableMeasuringKeys = DataBlockBuilder.buildFromRows(Collections.emptyList(), _measuringSchema);
-      _immutableProjectionVals = DataBlockBuilder.buildFromRows(Collections.emptyList(), _projectionSchema);
+      _immutableMeasuringKeys = DataBlockBuilder.buildFromRows(List.of(), _measuringSchema);
+      _immutableProjectionVals = DataBlockBuilder.buildFromRows(List.of(), _projectionSchema);
     } else {
       header = ObjectNullState.NON_NULL.getState();
       _immutableMeasuringKeys =
-          DataBlockBuilder.buildFromRows(Collections.singletonList(_extremumMeasuringKeys), _measuringSchema);
+          DataBlockBuilder.buildFromRows(List.<Object[]>of(_extremumMeasuringKeys), _measuringSchema);
       _immutableProjectionVals = DataBlockBuilder.buildFromRows(_extremumProjectionValues, _projectionSchema);
     }
     List<ByteBuffer> measuringKeys = DataBlockUtils.serialize(_immutableMeasuringKeys);
@@ -160,13 +160,11 @@ public class ExprMinMaxObject implements ParentAggregationFunctionResultObject {
     return bytes;
   }
 
-  /**
-   * Used during segment processing
-   * Compare the current key with the new key, and return the comparison result.
-   * > 0: the key is replaced because the new key is the new extremum
-   * = 0: new key is the same as the current extremum
-   * < 0: current key is still the extremum
-   */
+  /// Used during segment processing
+  /// Compare the current key with the new key, and return the comparison result.
+  /// > 0: the key is replaced because the new key is the new extremum
+  /// = 0: new key is the same as the current extremum
+  /// < 0: current key is still the extremum
   public int compareAndSetKey(List<ExprMinMaxMeasuringValSetWrapper> exprMinMaxWrapperValSets, int offset,
       boolean isMax) {
     Preconditions.checkState(_mutable, "Cannot compare and set key after the object is serialized");
@@ -194,19 +192,15 @@ public class ExprMinMaxObject implements ParentAggregationFunctionResultObject {
     return 0;
   }
 
-  /**
-   * Used during segment processing with compareAndSetKey
-   * Set the vals to the new vals if the key is replaced.
-   */
+  /// Used during segment processing with compareAndSetKey
+  /// Set the vals to the new vals if the key is replaced.
   public void setToNewVal(List<ExprMinMaxProjectionValSetWrapper> exprMinMaxProjectionValSetWrappers, int offset) {
     _extremumProjectionValues.clear();
     addVal(exprMinMaxProjectionValSetWrappers, offset);
   }
 
-  /**
-   * Used during segment processing with compareAndSetKey
-   * Add the vals to the list of vals if the key is the same.
-   */
+  /// Used during segment processing with compareAndSetKey
+  /// Add the vals to the list of vals if the key is the same.
   public void addVal(List<ExprMinMaxProjectionValSetWrapper> exprMinMaxProjectionValSetWrappers, int offset) {
     Object[] val = new Object[_projectionSchema.size()];
     for (int i = 0; i < _projectionSchema.size(); i++) {
@@ -223,11 +217,9 @@ public class ExprMinMaxObject implements ParentAggregationFunctionResultObject {
       for (int i = 0; i < _sizeOfExtremumMeasuringKeys; i++) {
         switch (_measuringSchema.getColumnDataType(i)) {
           case INT:
-          case BOOLEAN:
             extremumKeys[i] = _immutableMeasuringKeys.getInt(0, i);
             break;
           case LONG:
-          case TIMESTAMP:
             extremumKeys[i] = _immutableMeasuringKeys.getLong(0, i);
             break;
           case FLOAT:
@@ -236,11 +228,14 @@ public class ExprMinMaxObject implements ParentAggregationFunctionResultObject {
           case DOUBLE:
             extremumKeys[i] = _immutableMeasuringKeys.getDouble(0, i);
             break;
+          case BIG_DECIMAL:
+            extremumKeys[i] = _immutableMeasuringKeys.getBigDecimal(0, i);
+            break;
           case STRING:
             extremumKeys[i] = _immutableMeasuringKeys.getString(0, i);
             break;
-          case BIG_DECIMAL:
-            extremumKeys[i] = _immutableMeasuringKeys.getBigDecimal(0, i);
+          case BYTES:
+            extremumKeys[i] = _immutableMeasuringKeys.getBytes(0, i);
             break;
           default:
             throw new IllegalStateException("Unsupported data type: " + _measuringSchema.getColumnDataType(i));
@@ -250,54 +245,47 @@ public class ExprMinMaxObject implements ParentAggregationFunctionResultObject {
     }
   }
 
-  /**
-   * Get the field from a projection column
-   */
   @Override
   public Object getField(int rowId, int colId) {
     if (_mutable) {
       return _extremumProjectionValues.get(rowId)[colId];
     } else {
       switch (_projectionSchema.getColumnDataType(colId)) {
-        case BOOLEAN:
         case INT:
           return _immutableProjectionVals.getInt(rowId, colId);
-        case TIMESTAMP:
         case LONG:
           return _immutableProjectionVals.getLong(rowId, colId);
         case FLOAT:
           return _immutableProjectionVals.getFloat(rowId, colId);
         case DOUBLE:
           return _immutableProjectionVals.getDouble(rowId, colId);
-        case JSON:
+        case BIG_DECIMAL:
+          return _immutableProjectionVals.getBigDecimal(rowId, colId);
         case STRING:
           return _immutableProjectionVals.getString(rowId, colId);
         case BYTES:
           return _immutableProjectionVals.getBytes(rowId, colId);
-        case BIG_DECIMAL:
-          return _immutableProjectionVals.getBigDecimal(rowId, colId);
-        case BOOLEAN_ARRAY:
         case INT_ARRAY:
           return _immutableProjectionVals.getIntArray(rowId, colId);
-        case TIMESTAMP_ARRAY:
         case LONG_ARRAY:
           return _immutableProjectionVals.getLongArray(rowId, colId);
         case FLOAT_ARRAY:
           return _immutableProjectionVals.getFloatArray(rowId, colId);
         case DOUBLE_ARRAY:
           return _immutableProjectionVals.getDoubleArray(rowId, colId);
+        case BIG_DECIMAL_ARRAY:
+          return _immutableProjectionVals.getBigDecimalArray(rowId, colId);
         case STRING_ARRAY:
-        case BYTES_ARRAY:
           return _immutableProjectionVals.getStringArray(rowId, colId);
+        case BYTES_ARRAY:
+          return _immutableProjectionVals.getBytesArray(rowId, colId);
         default:
           throw new IllegalStateException("Unsupported data type: " + _projectionSchema.getColumnDataType(colId));
       }
     }
   }
 
-  /**
-   * Merge two exprminMaxObjects
-   */
+  /// Merge two exprminMaxObjects
   public ExprMinMaxObject merge(ExprMinMaxObject other, boolean isMax) {
     if (_isNull && other._isNull) {
       return this;
@@ -343,9 +331,7 @@ public class ExprMinMaxObject implements ParentAggregationFunctionResultObject {
     }
   }
 
-  /**
-   * get the number of rows in the projection data
-   */
+  /// get the number of rows in the projection data
   @Override
   public int getNumberOfRows() {
     if (_mutable) {
@@ -355,9 +341,7 @@ public class ExprMinMaxObject implements ParentAggregationFunctionResultObject {
     }
   }
 
-  /**
-   * return the schema of the projection data
-   */
+  /// return the schema of the projection data
   @Override
   public DataSchema getSchema() {
     // the final parent aggregation result only cares about the projection columns
