@@ -19,13 +19,15 @@
 package org.apache.pinot.integration.tests;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import org.apache.helix.model.ExternalView;
 import org.apache.helix.model.IdealState;
 import org.apache.pinot.broker.broker.helix.BaseBrokerStarter;
 import org.apache.pinot.common.utils.URIUtils;
+import org.apache.pinot.integration.tests.SharedHybridClusterIntegrationTestSuite.HybridScenarioLease;
 import org.apache.pinot.spi.config.table.TableType;
+import org.apache.pinot.spi.data.Schema;
 import org.apache.pinot.spi.exception.QueryErrorCode;
 import org.apache.pinot.spi.utils.CommonConstants;
 import org.apache.pinot.spi.utils.JsonUtils;
@@ -33,6 +35,8 @@ import org.apache.pinot.spi.utils.builder.TableNameBuilder;
 import org.apache.pinot.util.TestUtils;
 import org.intellij.lang.annotations.Language;
 import org.testng.Assert;
+import org.testng.annotations.AfterClass;
+import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 import static org.testng.Assert.assertEquals;
@@ -40,12 +44,60 @@ import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.fail;
 
 
-public class HybridClusterIntegrationTest extends BaseHybridClusterIntegrationTest {
+public class HybridClusterIntegrationTest extends SharedHybridClusterIntegrationTestSuite {
+  private HybridScenarioLease _canonicalScenario;
+
+  @BeforeClass(alwaysRun = true)
+  public void setUp()
+      throws Throwable {
+    _canonicalScenario = newScenario(getTableName(), getClass().getSimpleName());
+    Throwable primaryFailure = null;
+    try {
+      Schema schema = setUpStandardScenario(_canonicalScenario, null, DEFAULT_HYBRID_COUNT);
+      initializeCanonicalQueryState(getSharedAvroFiles(), schema);
+    } catch (Throwable t) {
+      primaryFailure = t;
+      throw t;
+    } finally {
+      if (primaryFailure != null) {
+        Throwable cleanupFailure = releaseCanonicalQueryState(null);
+        try {
+          closeScenario(_canonicalScenario, null);
+        } catch (Throwable t) {
+          cleanupFailure = appendCleanupFailure(cleanupFailure, t);
+        } finally {
+          _canonicalScenario = null;
+        }
+        if (cleanupFailure != null) {
+          primaryFailure.addSuppressed(cleanupFailure);
+        }
+      }
+    }
+  }
+
+  @AfterClass(alwaysRun = true)
+  public void tearDown()
+      throws Throwable {
+    Throwable cleanupFailure = releaseCanonicalQueryState(null);
+    if (_canonicalScenario != null) {
+      try {
+        closeScenario(_canonicalScenario, null);
+      } catch (Throwable t) {
+        cleanupFailure = appendCleanupFailure(cleanupFailure, t);
+      } finally {
+        _canonicalScenario = null;
+      }
+    }
+    if (cleanupFailure != null) {
+      throw cleanupFailure;
+    }
+  }
+
   @Test
   public void testUpdateBrokerResource()
       throws Exception {
     // Add a new broker to the cluster
-    BaseBrokerStarter brokerStarter = startOneBroker(1);
+    BaseBrokerStarter brokerStarter = startTrackedBroker(1);
 
     // Check if broker is added to all the tables in broker resource
     String clusterName = getHelixClusterName();
@@ -67,19 +119,18 @@ public class HybridClusterIntegrationTest extends BaseHybridClusterIntegrationTe
     }, 60_000L, "Failed to find broker in broker resource ExternalView");
 
     // Stop the broker
-    brokerStarter.stop();
-    _brokerPorts.remove(_brokerPorts.size() - 1);
+    stopTrackedBrokerProcess();
 
     // Dropping the broker should fail because it is still in the broker resource
     try {
-      sendDeleteRequest(_controllerRequestURLBuilder.forInstance(brokerId));
+      getOrCreateAdminClient().getInstanceClient().dropInstance(brokerId);
       fail("Dropping instance should fail because it is still in the broker resource");
     } catch (Exception e) {
       // Expected
     }
 
     // Untag the broker and update the broker resource so that it is removed from the broker resource
-    sendPutRequest(_controllerRequestURLBuilder.forInstanceUpdateTags(brokerId, Collections.emptyList(), true));
+    getOrCreateAdminClient().getInstanceClient().updateInstanceTags(brokerId, List.of(), true);
 
     // Check if broker is removed from all the tables in broker resource
     brokerResourceIdealState =
@@ -98,8 +149,8 @@ public class HybridClusterIntegrationTest extends BaseHybridClusterIntegrationTe
       return true;
     }, 60_000L, "Failed to remove broker from broker resource ExternalView");
 
-    // Dropping the broker should success now
-    sendDeleteRequest(_controllerRequestURLBuilder.forInstance(brokerId));
+    // Dropping the broker should succeed now
+    removeTrackedBrokerFromCluster();
 
     // Check if broker is dropped from the cluster
     assertFalse(_helixAdmin.getInstancesInCluster(clusterName).contains(brokerId));
@@ -108,54 +159,89 @@ public class HybridClusterIntegrationTest extends BaseHybridClusterIntegrationTe
   @Test
   public void testSegmentMetadataApi()
       throws Exception {
-    String jsonOutputStr = sendGetRequest(_controllerRequestURLBuilder.forSegmentsMetadataFromServer(getTableName()));
-    JsonNode tableSegmentsMetadata = JsonUtils.stringToJsonNode(jsonOutputStr);
-    Assert.assertEquals(tableSegmentsMetadata.size(), 8);
+    String offlineTableName = TableNameBuilder.OFFLINE.tableNameWithType(getTableName());
+    {
+      String jsonOutputStr = getOrCreateAdminClient().getSegmentClient()
+          .getSegmentsMetadata(getTableName(), null, null, TableType.OFFLINE.toString());
+      JsonNode tableSegmentsMetadata = JsonUtils.stringToJsonNode(jsonOutputStr);
+      Assert.assertEquals(tableSegmentsMetadata.size(), 8);
 
-    JsonNode segmentMetadataFromAllEndpoint = tableSegmentsMetadata.elements().next();
-    String segmentName = segmentMetadataFromAllEndpoint.get("segmentName").asText();
-    jsonOutputStr = sendGetRequest(_controllerRequestURLBuilder.forSegmentMetadata(getTableName(), segmentName));
-    JsonNode segmentMetadataFromDirectEndpoint = JsonUtils.stringToJsonNode(jsonOutputStr);
-    Assert.assertEquals(segmentMetadataFromAllEndpoint.get("totalDocs"),
-        segmentMetadataFromDirectEndpoint.get("segment.total.docs"));
+      JsonNode segmentMetadataFromAllEndpoint = tableSegmentsMetadata.elements().next();
+      String segmentName = segmentMetadataFromAllEndpoint.get("segmentName").asText();
+      Map<String, Object> segmentMetadataFromDirectEndpoint = getOrCreateAdminClient().getSegmentClient()
+          .getSegmentMetadata(offlineTableName, segmentName, null);
+      Assert.assertEquals(segmentMetadataFromAllEndpoint.get("totalDocs"),
+          JsonUtils.objectToJsonNode(segmentMetadataFromDirectEndpoint).get("segment.total.docs"));
+    }
+    // get list of segment names to pass in query params for following tests
+    List<String> segments = getSegmentNames(getTableName(), TableType.OFFLINE.toString());
+    // with null column params
+    {
+      String jsonOutputStr = getOrCreateAdminClient().getSegmentClient()
+          .getSegmentsMetadata(getTableName(), null, segments, TableType.OFFLINE.toString());
+      JsonNode tableSegmentsMetadata = JsonUtils.stringToJsonNode(jsonOutputStr);
+      Assert.assertEquals(tableSegmentsMetadata.size(), segments.size());
+      JsonNode segmentMetadataFromAllEndpoint = tableSegmentsMetadata.elements().next();
+      String segmentName = segmentMetadataFromAllEndpoint.get("segmentName").asText();
+      Map<String, Object> segmentMetadataFromDirectEndpoint = getOrCreateAdminClient().getSegmentClient()
+          .getSegmentMetadata(offlineTableName, segmentName, null);
+      Assert.assertEquals(segmentMetadataFromAllEndpoint.get("totalDocs"),
+          JsonUtils.objectToJsonNode(segmentMetadataFromDirectEndpoint).get("segment.total.docs"));
+      Assert.assertEquals(tableSegmentsMetadata.get(segments.get(0)).get("columns").size(), 0);
+    }
+    // with * column param
+    {
+      String jsonOutputStr = getOrCreateAdminClient().getSegmentClient()
+          .getSegmentsMetadata(getTableName(), List.of("*"), segments, TableType.OFFLINE.toString());
+      JsonNode tableSegmentsMetadata = JsonUtils.stringToJsonNode(jsonOutputStr);
+      Assert.assertEquals(tableSegmentsMetadata.size(), segments.size());
+      JsonNode segmentMetadataFromAllEndpoint = tableSegmentsMetadata.elements().next();
+      String segmentName = segmentMetadataFromAllEndpoint.get("segmentName").asText();
+      Map<String, Object> segmentMetadataFromDirectEndpoint = getOrCreateAdminClient().getSegmentClient()
+          .getSegmentMetadata(offlineTableName, segmentName, null);
+      Assert.assertEquals(segmentMetadataFromAllEndpoint.get("totalDocs"),
+          JsonUtils.objectToJsonNode(segmentMetadataFromDirectEndpoint).get("segment.total.docs"));
+      Assert.assertEquals(tableSegmentsMetadata.get(segments.get(0)).get("columns").size(), 79);
+    }
+    // with specified column params
+    {
+      List<String> columns = List.of("Carrier", "FlightNum", "TailNum");
+      String jsonOutputStr = getOrCreateAdminClient().getSegmentClient()
+          .getSegmentsMetadata(getTableName(), columns, segments, TableType.OFFLINE.toString());
+      JsonNode tableSegmentsMetadata = JsonUtils.stringToJsonNode(jsonOutputStr);
+      Assert.assertEquals(tableSegmentsMetadata.size(), segments.size());
+      JsonNode segmentMetadataFromAllEndpoint = tableSegmentsMetadata.elements().next();
+      String segmentName = segmentMetadataFromAllEndpoint.get("segmentName").asText();
+      Map<String, Object> segmentMetadataFromDirectEndpoint = getOrCreateAdminClient().getSegmentClient()
+          .getSegmentMetadata(offlineTableName, segmentName, null);
+      Assert.assertEquals(segmentMetadataFromAllEndpoint.get("totalDocs"),
+          JsonUtils.objectToJsonNode(segmentMetadataFromDirectEndpoint).get("segment.total.docs"));
+      Assert.assertEquals(tableSegmentsMetadata.get(segments.get(0)).get("columns").size(), columns.size());
+    }
   }
 
   @Test
   public void testSegmentListApi()
       throws Exception {
-    {
-      String jsonOutputStr =
-          sendGetRequest(_controllerRequestURLBuilder.forSegmentListAPI(getTableName(), TableType.OFFLINE.toString()));
-      JsonNode array = JsonUtils.stringToJsonNode(jsonOutputStr);
-      // There should be one element in the array
-      JsonNode element = array.get(0);
-      JsonNode segments = element.get("OFFLINE");
-      Assert.assertEquals(segments.size(), 8);
-    }
-    {
-      String jsonOutputStr =
-          sendGetRequest(_controllerRequestURLBuilder.forSegmentListAPI(getTableName(), TableType.REALTIME.toString()));
-      JsonNode array = JsonUtils.stringToJsonNode(jsonOutputStr);
-      // There should be one element in the array
-      JsonNode element = array.get(0);
-      JsonNode segments = element.get("REALTIME");
-      Assert.assertEquals(segments.size(), 24);
-    }
-    {
-      String jsonOutputStr = sendGetRequest(_controllerRequestURLBuilder.forSegmentListAPI(getTableName()));
-      JsonNode array = JsonUtils.stringToJsonNode(jsonOutputStr);
-      JsonNode offlineSegments = array.get(0).get("OFFLINE");
-      Assert.assertEquals(offlineSegments.size(), 8);
-      JsonNode realtimeSegments = array.get(1).get("REALTIME");
-      Assert.assertEquals(realtimeSegments.size(), 24);
-    }
+    List<String> offlineSegments =
+        getOrCreateAdminClient().getSegmentClient().listSegments(getTableName(), TableType.OFFLINE.toString(), false);
+    Assert.assertEquals(offlineSegments.size(), 8);
+
+    List<String> realtimeSegments =
+        getOrCreateAdminClient().getSegmentClient().listSegments(getTableName(), TableType.REALTIME.toString(), false);
+    Assert.assertEquals(realtimeSegments.size(), 24);
+
+    Assert.assertEquals(offlineSegments.size(), 8);
+    Assert.assertEquals(realtimeSegments.size(), 24);
   }
 
   // NOTE: Reload consuming segment will force commit it, so run this test after segment list api test
   @Test(dependsOnMethods = "testSegmentListApi")
   public void testReload()
       throws Exception {
+    markCanonicalSchemaMutation();
     super.testReload(true);
+    clearCanonicalSchemaMutation();
   }
 
   @Test
@@ -170,10 +256,9 @@ public class HybridClusterIntegrationTest extends BaseHybridClusterIntegrationTe
     Assert.assertNotNull(getDebugInfo("debug/routingTable/" + TableNameBuilder.REALTIME.tableNameWithType(tableName)));
   }
 
-  @Test(dataProvider = "useBothQueryEngines")
-  public void testBrokerDebugRoutingTableSQL(boolean useMultiStageQueryEngine)
+  @Test
+  public void testBrokerDebugRoutingTableSQL()
       throws Exception {
-    setUseMultiStageQueryEngine(useMultiStageQueryEngine);
     String tableName = getTableName();
     String offlineTableName = TableNameBuilder.OFFLINE.tableNameWithType(tableName);
     String realtimeTableName = TableNameBuilder.REALTIME.tableNameWithType(tableName);
@@ -184,12 +269,9 @@ public class HybridClusterIntegrationTest extends BaseHybridClusterIntegrationTe
     Assert.assertNotNull(getDebugInfo("debug/routingTable/sql?query=" + encodedSQL));
   }
 
-  @Test(dataProvider = "useBothQueryEngines")
-  public void testQueryTracing(boolean useMultiStageQueryEngine)
+  @Test
+  public void testQueryTracing()
       throws Exception {
-    setUseMultiStageQueryEngine(useMultiStageQueryEngine);
-    // Tracing is a v1 only concept and the v2 query engine has separate multi-stage stats that are enabled by default
-    notSupportedInV2();
     JsonNode jsonNode = postQuery("SET trace = true; SELECT COUNT(*) FROM " + getTableName());
     Assert.assertEquals(jsonNode.get("resultTable").get("rows").get(0).get(0).asLong(), getCountStarResult());
     Assert.assertTrue(jsonNode.get("exceptions").isEmpty());
@@ -199,12 +281,9 @@ public class HybridClusterIntegrationTest extends BaseHybridClusterIntegrationTe
     Assert.assertTrue(traceInfo.has("localhost_R"));
   }
 
-  @Test(dataProvider = "useBothQueryEngines")
-  public void testQueryTracingWithLiteral(boolean useMultiStageQueryEngine)
+  @Test
+  public void testQueryTracingWithLiteral()
       throws Exception {
-    setUseMultiStageQueryEngine(useMultiStageQueryEngine);
-    // Tracing is a v1 only concept and the v2 query engine has separate multi-stage stats that are enabled by default
-    notSupportedInV2();
     JsonNode jsonNode =
         postQuery("SET trace = true; SELECT 1, \'test\', ArrDelay FROM " + getTableName() + " LIMIT 10");
     long countStarResult = 10;
@@ -274,13 +353,9 @@ public class HybridClusterIntegrationTest extends BaseHybridClusterIntegrationTe
     super.testHardcodedQueries();
   }
 
-  @Test(dataProvider = "useBothQueryEngines")
-  public void testQueriesFromQueryFile(boolean useMultiStageQueryEngine)
+  @Test
+  public void testQueriesFromQueryFile()
       throws Exception {
-    setUseMultiStageQueryEngine(useMultiStageQueryEngine);
-    // Some of the hardcoded queries in the query file need to be adapted for v2 (for instance, using the arrayToMV
-    // with multi-value columns in filters / aggregations)
-    notSupportedInV2();
     super.testQueriesFromQueryFile();
   }
 
@@ -295,6 +370,7 @@ public class HybridClusterIntegrationTest extends BaseHybridClusterIntegrationTe
   @Override
   public void testInstanceShutdown()
       throws Exception {
+    markCanonicalRoutingMutation();
     super.testInstanceShutdown();
   }
 
@@ -305,9 +381,8 @@ public class HybridClusterIntegrationTest extends BaseHybridClusterIntegrationTe
     super.testBrokerResponseMetadata();
   }
 
-  @Test(dataProvider = "useBothQueryEngines")
-  public void testVirtualColumnQueries(boolean useMultiStageQueryEngine)
-      throws Exception {
+  @Test
+  public void testVirtualColumnQueries() {
     super.testVirtualColumnQueries();
   }
 
@@ -341,6 +416,14 @@ public class HybridClusterIntegrationTest extends BaseHybridClusterIntegrationTe
       QueryAssert.assertThat(response).firstException().hasErrorCode(QueryErrorCode.BROKER_RESOURCE_MISSING)
           .containsMessage("BrokerResourceMissingError");
     }
+  }
+
+  @Test
+  @Override
+  public void testQueriesDisabled()
+      throws Exception {
+    markCanonicalRoutingMutation();
+    super.testQueriesDisabled();
   }
 
   @Test
