@@ -19,19 +19,18 @@
 package org.apache.pinot.integration.tests;
 
 import java.io.File;
-import java.io.IOException;
 import java.net.URL;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.apache.commons.io.FileUtils;
 import org.apache.pinot.client.ResultSetGroup;
+import org.apache.pinot.client.admin.PinotAdminAuthenticationException;
+import org.apache.pinot.client.admin.PinotAdminClient;
 import org.apache.pinot.common.auth.UrlAuthProvider;
 import org.apache.pinot.controller.helix.core.minion.TaskSchedulingContext;
 import org.apache.pinot.core.common.MinionConstants;
 import org.apache.pinot.spi.config.table.TableTaskConfig;
-import org.apache.pinot.spi.config.table.TableType;
 import org.apache.pinot.spi.env.PinotConfiguration;
 import org.apache.pinot.spi.utils.builder.TableNameBuilder;
 import org.apache.pinot.util.TestUtils;
@@ -133,11 +132,11 @@ public class UrlAuthRealtimeIntegrationTest extends BaseClusterIntegrationTest {
     properties.put("bucketTimePeriod", "30d");
 
     return new TableTaskConfig(
-        Collections.singletonMap(MinionConstants.RealtimeToOfflineSegmentsTask.TASK_TYPE, properties));
+        Map.of(MinionConstants.RealtimeToOfflineSegmentsTask.TASK_TYPE, properties));
   }
 
   @Override
-  protected Map<String, String> getControllerRequestClientHeaders() {
+  protected Map<String, String> getAdminClientHeaders() {
     return AUTH_HEADER;
   }
 
@@ -146,11 +145,14 @@ public class UrlAuthRealtimeIntegrationTest extends BaseClusterIntegrationTest {
     return AUTH_HEADER;
   }
 
-  @Test(expectedExceptions = IOException.class)
+  @Test(expectedExceptions = PinotAdminAuthenticationException.class)
   public void testUnauthenticatedFailure()
-      throws IOException {
-    sendDeleteRequest(
-        _controllerRequestURLBuilder.forTableDelete(TableNameBuilder.REALTIME.tableNameWithType("mytable")));
+      throws Exception {
+    try (PinotAdminClient unauthenticatedAdminClient =
+        new PinotAdminClient(getControllerBaseApiUrl().replaceFirst("^https?://", ""))) {
+      unauthenticatedAdminClient.getTableClient()
+          .deleteTable(TableNameBuilder.REALTIME.tableNameWithType("mytable"));
+    }
   }
 
   @Test
@@ -167,7 +169,8 @@ public class UrlAuthRealtimeIntegrationTest extends BaseClusterIntegrationTest {
     // wait for offline segments
     List<String> offlineSegments = TestUtils.waitForResult(() -> {
       List<String> currentOfflineSegments =
-          getControllerRequestClient().listSegments(getTableName(), TableType.OFFLINE.name(), false);
+          getOrCreateAdminClient().getSegmentClient()
+              .listSegments(TableNameBuilder.OFFLINE.tableNameWithType(getTableName()), false);
       Assert.assertFalse(currentOfflineSegments.isEmpty());
       return currentOfflineSegments;
     }, 30000);
@@ -178,9 +181,9 @@ public class UrlAuthRealtimeIntegrationTest extends BaseClusterIntegrationTest {
 
     // download and sanity-check size of offline segment(s)
     for (String segment : offlineSegments) {
-      Assert.assertTrue(
-          sendGetRequest(_controllerRequestURLBuilder.forSegmentDownload(getTableName(), segment), AUTH_HEADER).length()
-              > 200000); // download segment
+      byte[] segmentBytes = getOrCreateAdminClient().getSegmentClient()
+          .downloadSegment(TableNameBuilder.OFFLINE.tableNameWithType(getTableName()), segment);
+      Assert.assertTrue(segmentBytes.length > 200000); // download segment
     }
   }
 }
