@@ -20,7 +20,6 @@ package org.apache.pinot.tsdb.m3ql;
 
 import com.google.common.base.Preconditions;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -29,7 +28,8 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.pinot.spi.env.PinotConfiguration;
-import org.apache.pinot.tsdb.m3ql.parser.Tokenizer;
+import org.apache.pinot.tsdb.m3ql.parser.M3qlParser;
+import org.apache.pinot.tsdb.m3ql.parser.ParseException;
 import org.apache.pinot.tsdb.m3ql.plan.KeepLastValuePlanNode;
 import org.apache.pinot.tsdb.m3ql.plan.TransformNullPlanNode;
 import org.apache.pinot.tsdb.m3ql.time.TimeBucketComputer;
@@ -63,8 +63,12 @@ public class M3TimeSeriesPlanner implements TimeSeriesLogicalPlanner {
 
   public BaseTimeSeriesPlanNode planQuery(RangeTimeSeriesRequest request) {
     PlanIdGenerator planIdGenerator = new PlanIdGenerator();
-    Tokenizer tokenizer = new Tokenizer(request.getQuery());
-    List<List<String>> commands = tokenizer.tokenize();
+    List<List<String>> commands;
+    try {
+      commands = M3qlParser.parse(request.getQuery());
+    } catch (ParseException e) {
+      throw new IllegalArgumentException("Failed to parse M3QL query: " + e.getMessage(), e);
+    }
     Preconditions.checkState(commands.size() > 1,
         "At least two commands required. " + "Query should start with a fetch followed by an aggregation.");
     BaseTimeSeriesPlanNode lastNode = null;
@@ -89,7 +93,7 @@ public class M3TimeSeriesPlanner implements TimeSeriesLogicalPlanner {
         case "max":
           Preconditions.checkState(commandId == 1, "Aggregation should be the second command (fetch should be first)");
           Preconditions.checkState(aggInfo == null, "Aggregation already set. Only single agg allowed.");
-          aggInfo = new AggInfo(command.toUpperCase(Locale.ENGLISH), false, Collections.emptyMap());
+          aggInfo = new AggInfo(command.toUpperCase(Locale.ENGLISH), false, Map.of());
           if (commands.get(commandId).size() > 1) {
             String[] cols = commands.get(commandId).get(1).split(",");
             groupByColumns = Stream.of(cols).map(String::trim).collect(Collectors.toList());
@@ -161,6 +165,7 @@ public class M3TimeSeriesPlanner implements TimeSeriesLogicalPlanner {
     if (request.getNumGroupsLimit() > 0) {
       queryOptions.put("numGroupsLimit", Integer.toString(request.getNumGroupsLimit()));
     }
+    queryOptions.putAll(request.getQueryOptions());
     return new LeafTimeSeriesPlanNode(planId, children, tableName, timeColumn, timeUnit, 0L, filter, valueExpr, aggInfo,
         groupByColumns, request.getLimit(), queryOptions);
   }
