@@ -19,7 +19,6 @@
 package org.apache.pinot.query.planner.physical.v2;
 
 import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -45,30 +44,27 @@ import org.apache.pinot.query.routing.MailboxInfo;
 import org.apache.pinot.query.routing.MailboxInfos;
 import org.apache.pinot.query.routing.QueryServerInstance;
 import org.apache.pinot.query.routing.SharedMailboxInfos;
+import org.apache.pinot.spi.config.table.TableType;
 
 
-/**
- * <h1>Responsibilities</h1>
- * This does the following:
- * <ul>
- *   <li>Splits plan around PhysicalExchange nodes to create plan fragments.</li>
- *   <li>Converts PRelNodes to PlanNodes.</li>
- *   <li>
- *     Creates mailboxes for connecting plan fragments. This is done simply based on the workers in the send/receive
- *     plan nodes, and the exchange strategy (identity, partitioning, etc.).
- *   </li>
- *   <li>
- *     Creates metadata for each plan fragment, which includes the scanned tables, unavailable segments, etc.
- *   </li>
- * </ul>
- * <h1>Design Note</h1>
- * This class is completely un-opinionated. The old optimizer had a lot of custom logic added to mailbox assignment,
- * but this class instead doesn't do any special handling, apart from assigning mailboxes based on the exchange
- * strategy. This is an important and conscious design choice, because it ensures division of responsibilities and
- * allows optimizer rules like worker assignment to completely own their responsibilities. This is also important for
- * keeping the optimizer maximally pluggable. (e.g. you can swap out the default worker assignment rule with a
- * custom rule like the LiteMode worker assignment rule).
- */
+/// # Responsibilities
+///
+/// This does the following:
+///
+/// - Splits plan around PhysicalExchange nodes to create plan fragments.
+/// - Converts PRelNodes to PlanNodes.
+/// - Creates mailboxes for connecting plan fragments. This is done simply based on the workers in the send/receive
+///   plan nodes, and the exchange strategy (identity, partitioning, etc.).
+/// - Creates metadata for each plan fragment, which includes the scanned tables, unavailable segments, etc.
+///
+/// # Design Note
+///
+/// This class is completely un-opinionated. The old optimizer had a lot of custom logic added to mailbox assignment,
+/// but this class instead doesn't do any special handling, apart from assigning mailboxes based on the exchange
+/// strategy. This is an important and conscious design choice, because it ensures division of responsibilities and
+/// allows optimizer rules like worker assignment to completely own their responsibilities. This is also important for
+/// keeping the optimizer maximally pluggable. (e.g. you can swap out the default worker assignment rule with a
+/// custom rule like the LiteMode worker assignment rule).
 public class PlanFragmentAndMailboxAssignment {
   private static final int ROOT_FRAGMENT_ID = 0;
 
@@ -88,11 +84,15 @@ public class PlanFragmentAndMailboxAssignment {
       processTableScan((PhysicalTableScan) pRelNode.unwrap(), currentFragmentId, context);
     }
     if (pRelNode.unwrap() instanceof PhysicalExchange) {
+      PhysicalExchange physicalExchange = (PhysicalExchange) pRelNode.unwrap();
+      if (physicalExchange.getExchangeStrategy() == ExchangeStrategy.LOOKUP_LOCAL_EXCHANGE) {
+        processLookupLocalExchange(pRelNode, parent, currentFragmentId, context);
+        return;
+      }
       // Split an exchange into two fragments: one for the sender and one for the receiver.
       // The sender fragment will have a MailboxSendNode and receiver a MailboxReceiveNode.
       // It is possible that the receiver fragment doesn't exist yet (e.g. when PhysicalExchange is the root node).
       // In that case, we also create it here. If it exists already, we simply re-use it.
-      PhysicalExchange physicalExchange = (PhysicalExchange) pRelNode.unwrap();
       PlanFragment receiverFragment = context._planFragmentMap.get(currentFragmentId);
       int senderFragmentId = context._planFragmentMap.size() + (receiverFragment == null ? 1 : 0);
       final DataSchema inputFragmentSchema = PRelToPlanNodeConverter.toDataSchema(
@@ -157,11 +157,87 @@ public class PlanFragmentAndMailboxAssignment {
           tableScanMetadata.getUnavailableSegmentsMap().get(tableName));
     }
     fragmentMetadata.addScannedTable(tableName);
-    fragmentMetadata.setWorkerIdToSegmentsMap(tableScanMetadata.getWorkedIdToSegmentsMap());
+
+    // Handle logical tables vs physical tables differently
+    if (tableScanMetadata.isLogicalTable()) {
+      // For logical tables, use workerIdToTableSegmentsMap (physicalTableName -> segments)
+      fragmentMetadata.setWorkerIdToTableSegmentsMap(tableScanMetadata.getWorkerIdToLogicalTableSegmentsMap());
+    } else {
+      // For physical tables, use workerIdToSegmentsMap (tableType -> segments)
+      fragmentMetadata.setWorkerIdToSegmentsMap(tableScanMetadata.getWorkedIdToSegmentsMap());
+    }
+
     NodeHint nodeHint = NodeHint.fromRelHints(tableScan.getHints());
     fragmentMetadata.setTableOptions(nodeHint.getHintOptions().get(PinotHintOptions.TABLE_HINT_OPTIONS));
     if (tableScanMetadata.getTimeBoundaryInfo() != null) {
       fragmentMetadata.setTimeBoundaryInfo(tableScanMetadata.getTimeBoundaryInfo());
+    }
+  }
+
+  /// Handles LOOKUP_LOCAL_EXCHANGE: a pseudo-exchange that does NOT split fragments. The dim table
+  /// stays in the join's fragment. This method:
+  ///
+  /// 1. Registers the dim table name so the fragment is classified as a leaf stage
+  /// 2. Sets fake empty segments per worker (the dim table is accessed via
+  ///       `DimensionTableDataManager` at runtime, not via segment routing)
+  /// 3. Converts children to PlanNodes in the same fragment (no MailboxSend/Receive)
+  ///
+  /// This matches V1's behavior in `WorkerManager.assignWorkersToNonRootFragment` where
+  /// lookup joins are detected and the dim table is registered with empty segments.
+  private void processLookupLocalExchange(PRelNode pRelNode, @Nullable PlanNode parent, int currentFragmentId,
+      Context context) {
+    // Find the dim table scan in the exchange's children and register it with empty segments.
+    DispatchablePlanMetadata fragmentMetadata = context._fragmentMetadataMap.get(currentFragmentId);
+    for (PRelNode child : pRelNode.getPRelInputs()) {
+      registerDimTableInFragment(child, fragmentMetadata);
+    }
+    // Process children in the same fragment (no MailboxSend/Receive), but skip processTableScan
+    // by converting PRelNodes to PlanNodes directly. The right side of a lookup join is always
+    // [Project →] TableScan (at most 2 levels deep) — Calcite pushes dim-side filters to post-join.
+    for (PRelNode child : pRelNode.getPRelInputs()) {
+      PlanNode planNode = PRelToPlanNodeConverter.toPlanNode(child, currentFragmentId);
+      for (PRelNode grandChild : child.getPRelInputs()) {
+        Preconditions.checkState(grandChild.getPRelInputs().isEmpty(),
+            "LOOKUP_LOCAL_EXCHANGE right side deeper than 2 levels: found children under %s. "
+                + "Expected [Project →] TableScan only.", grandChild.unwrap().getClass().getSimpleName());
+        PlanNode grandChildNode = PRelToPlanNodeConverter.toPlanNode(grandChild, currentFragmentId);
+        planNode.getInputs().add(grandChildNode);
+      }
+      if (parent != null) {
+        parent.getInputs().add(planNode);
+      }
+    }
+  }
+
+  /// Recursively find TableScan nodes and register the dim table name in the fragment metadata with
+  /// fake empty segments per worker, matching V1's `WorkerManager.assignWorkersToNonRootFragment`
+  /// behavior for lookup joins.
+  private void registerDimTableInFragment(PRelNode pRelNode, DispatchablePlanMetadata fragmentMetadata) {
+    if (pRelNode.unwrap() instanceof TableScan) {
+      PhysicalTableScan tableScan = (PhysicalTableScan) pRelNode.unwrap();
+      TableScanMetadata tableScanMetadata = Objects.requireNonNull(tableScan.getTableScanMetadata(),
+          "No metadata in table scan PRelNode");
+      String tableName = tableScanMetadata.getScannedTables().stream().findFirst().orElseThrow();
+      fragmentMetadata.addScannedTable(tableName);
+      // Set fake empty segments for each worker so isLeafStageWorker() returns true.
+      // The actual dim table data comes from DimensionTableDataManager at runtime.
+      // Use putIfAbsent rather than overwrite to be defensive if called multiple times.
+      Map<Integer, QueryServerInstance> workers = fragmentMetadata.getWorkerIdToServerInstanceMap();
+      if (workers != null) {
+        Map<Integer, Map<String, List<String>>> existing = fragmentMetadata.getWorkerIdToSegmentsMap();
+        Map<Integer, Map<String, List<String>>> fakeSegmentsMap =
+            existing != null ? new HashMap<>(existing) : new HashMap<>();
+        for (Integer workerId : workers.keySet()) {
+          fakeSegmentsMap.putIfAbsent(workerId, Map.of(TableType.OFFLINE.name(), List.of()));
+        }
+        fragmentMetadata.setWorkerIdToSegmentsMap(fakeSegmentsMap);
+      }
+      NodeHint nodeHint = NodeHint.fromRelHints(tableScan.getHints());
+      fragmentMetadata.setTableOptions(nodeHint.getHintOptions().get(PinotHintOptions.TABLE_HINT_OPTIONS));
+      return;
+    }
+    for (PRelNode child : pRelNode.getPRelInputs()) {
+      registerDimTableInFragment(child, fragmentMetadata);
     }
   }
 
@@ -190,6 +266,15 @@ public class PlanFragmentAndMailboxAssignment {
   private void computeMailboxInfos(int senderStageId, int receiverStageId,
       Map<Integer, QueryServerInstance> senderWorkers, Map<Integer, QueryServerInstance> receiverWorkers,
       ExchangeStrategy exchangeDesc, Context context) {
+    if (senderWorkers.isEmpty() && receiverWorkers.isEmpty()) {
+      // Both stages have no workers, which happens for an all-empty subtree: a leaf stage with no routable segments
+      // (e.g. an empty table or all segments pruned by the broker) whose emptiness propagates up. There is no data to
+      // route and no receiver to inform, and these stages are discarded by the empty-leaf short-circuit in
+      // PinotDispatchPlanner#finalizeDispatchableSubPlan. Skipping avoids the single-instance-receiver check below for
+      // a degenerate SINGLETON gather. When only the sender is empty (e.g. the empty side of a union or join), the
+      // exchange-specific logic below still wires the receiver with an empty sender list so it knows to expect no rows.
+      return;
+    }
     DispatchablePlanMetadata senderMetadata = context._fragmentMetadataMap.get(senderStageId);
     DispatchablePlanMetadata receiverMetadata = context._fragmentMetadataMap.get(receiverStageId);
     Map<Integer, Map<Integer, MailboxInfos>> senderMailboxMap = senderMetadata.getWorkerIdToMailboxesMap();
@@ -202,9 +287,9 @@ public class PlanFragmentAndMailboxAssignment {
           QueryServerInstance senderWorker = senderWorkers.get(workerId);
           QueryServerInstance receiverWorker = receiverWorkers.get(workerId);
           MailboxInfos mailboxInfosForSender = new SharedMailboxInfos(new MailboxInfo(receiverWorker.getHostname(),
-              receiverWorker.getQueryMailboxPort(), ImmutableList.of(workerId)));
+              receiverWorker.getQueryMailboxPort(), List.of(workerId)));
           MailboxInfos mailboxInfosForReceiver = new SharedMailboxInfos(new MailboxInfo(senderWorker.getHostname(),
-              senderWorker.getQueryMailboxPort(), ImmutableList.of(workerId)));
+              senderWorker.getQueryMailboxPort(), List.of(workerId)));
           senderMailboxMap.computeIfAbsent(workerId, (x) -> new HashMap<>()).put(receiverStageId,
               mailboxInfosForSender);
           receiverMailboxMap.computeIfAbsent(workerId, (x) -> new HashMap<>()).put(
@@ -215,7 +300,7 @@ public class PlanFragmentAndMailboxAssignment {
         Preconditions.checkState(receiverWorkers.size() == 1, "Singleton expects single instance in receiver");
         QueryServerInstance receiverWorker = receiverWorkers.get(0);
         MailboxInfos mailboxInfosForSender = new SharedMailboxInfos(
-            new MailboxInfo(receiverWorker.getHostname(), receiverWorker.getQueryMailboxPort(), ImmutableList.of(0)));
+            new MailboxInfo(receiverWorker.getHostname(), receiverWorker.getQueryMailboxPort(), List.of(0)));
         for (int workerId = 0; workerId < senderWorkers.size(); workerId++) {
           senderMailboxMap.computeIfAbsent(workerId, (x) -> new HashMap<>())
               .put(receiverStageId, mailboxInfosForSender);
@@ -240,6 +325,9 @@ public class PlanFragmentAndMailboxAssignment {
         }
         break;
       }
+      case LOOKUP_LOCAL_EXCHANGE:
+        throw new IllegalStateException("LOOKUP_LOCAL_EXCHANGE should not reach computeMailboxInfos — "
+            + "it must be handled as transparent in process() before fragment splitting");
       default:
         throw new UnsupportedOperationException("exchange desc not supported yet: " + exchangeDesc);
     }
