@@ -18,9 +18,11 @@
  */
 package org.apache.pinot.query.mailbox;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import javax.annotation.Nullable;
 import org.apache.pinot.common.datatable.StatMap;
@@ -34,16 +36,20 @@ import org.apache.pinot.query.runtime.operator.MailboxSendOperator;
 import org.apache.pinot.query.runtime.operator.OperatorTestUtil;
 import org.apache.pinot.query.runtime.plan.MultiStageQueryStats;
 import org.apache.pinot.query.testutils.QueryTestUtils;
+import org.apache.pinot.spi.config.instance.InstanceType;
 import org.apache.pinot.spi.env.PinotConfiguration;
 import org.apache.pinot.spi.exception.QueryErrorCode;
-import org.apache.pinot.spi.utils.CommonConstants;
+import org.apache.pinot.spi.utils.CommonConstants.MultiStageQueryRunner;
 import org.apache.pinot.util.TestUtils;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.BeforeTest;
 import org.testng.annotations.Test;
 
-import static org.testng.Assert.*;
+import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertNotNull;
+import static org.testng.Assert.assertNull;
+import static org.testng.Assert.assertTrue;
 
 
 public class MailboxServiceTest {
@@ -61,11 +67,10 @@ public class MailboxServiceTest {
   @BeforeClass
   public void setUp() {
     PinotConfiguration config = new PinotConfiguration(
-        Collections.singletonMap(CommonConstants.MultiStageQueryRunner.KEY_OF_MAX_INBOUND_QUERY_DATA_BLOCK_SIZE_BYTES,
-            MAX_DATA_BLOCK_SIZE));
-    _mailboxService1 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), config);
+        Map.of(MultiStageQueryRunner.KEY_OF_MAX_INBOUND_QUERY_DATA_BLOCK_SIZE_BYTES, MAX_DATA_BLOCK_SIZE));
+    _mailboxService1 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), InstanceType.BROKER, config);
     _mailboxService1.start();
-    _mailboxService2 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), config);
+    _mailboxService2 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), InstanceType.SERVER, config);
     _mailboxService2.start();
   }
 
@@ -92,23 +97,26 @@ public class MailboxServiceTest {
       sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{Integer.toString(i)}));
     }
     sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-    sendingMailbox.complete();
 
     ReceivingMailbox receivingMailbox = _mailboxService1.getReceivingMailbox(mailboxId);
     receivingMailbox.registeredReader(() -> {
     });
     for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - 1; i++) {
-      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i);
+      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i - 1);
       List<Object[]> rows = getRows(receivingMailbox);
       assertEquals(rows.size(), 1);
       assertEquals(rows.get(0), new Object[]{Integer.toString(i)});
     }
-    assertEquals(receivingMailbox.getNumPendingBlocks(), 1);
+    assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
     ReceivingMailbox.MseBlockWithStats block = receivingMailbox.poll();
     assertNotNull(block);
     assertTrue(block.getBlock().isSuccess());
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
-    assertNull(receivingMailbox.poll());
+
+    // Following calls to poll() should return the same eos block
+    block = receivingMailbox.poll();
+    assertNotNull(block);
+    assertTrue(block.getBlock().isSuccess());
   }
 
   @Test
@@ -129,22 +137,20 @@ public class MailboxServiceTest {
       sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{Integer.toString(i)}));
     }
     sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-    sendingMailbox.complete();
 
     assertEquals(numCallbacks.get(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS);
 
     for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - 1; i++) {
-      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i);
+      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i - 1);
       List<Object[]> rows = getRows(receivingMailbox);
       assertEquals(rows.size(), 1);
       assertEquals(rows.get(0), new Object[]{Integer.toString(i)});
     }
-    assertEquals(receivingMailbox.getNumPendingBlocks(), 1);
+    assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
     MseBlock block = readBlock(receivingMailbox);
     assertNotNull(block);
     assertTrue(block.isEos());
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
-    assertNull(receivingMailbox.poll());
   }
 
   @Test
@@ -215,7 +221,7 @@ public class MailboxServiceTest {
     // Send one data block and then cancel
     sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"0"}));
     receivingMailbox.cancel();
-    assertEquals(numCallbacks.get(), 1);
+    assertEquals(numCallbacks.get(), 2);
 
     // Data blocks will be cleaned up
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
@@ -226,7 +232,7 @@ public class MailboxServiceTest {
     // Cancel is idempotent for both sending and receiving mailbox, so safe to call multiple times
     sendingMailbox.cancel(new Exception("TEST ERROR"));
     receivingMailbox.cancel();
-    assertEquals(numCallbacks.get(), 1);
+    assertEquals(numCallbacks.get(), 2);
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
   }
 
@@ -244,12 +250,10 @@ public class MailboxServiceTest {
     // Send one data block, sleep until timed out, then send one more block
     sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"0"}));
     Thread.sleep(deadlineMs - System.currentTimeMillis() + 10);
-    try {
-      sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"1"}));
-      fail("Expect exception when sending data after timing out");
-    } catch (Exception e) {
-      // Expected
-    }
+    sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"1"}));
+
+    // Mailbox should be terminated due to timeout
+    assertTrue(sendingMailbox.isTerminated());
 
     // Data blocks will be cleaned up
     assertEquals(numCallbacks.get(), 2);
@@ -281,13 +285,11 @@ public class MailboxServiceTest {
       sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{Integer.toString(i)}));
     }
 
-    // Next send will throw exception because buffer is full
-    try {
-      sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-      fail("Except exception when sending data after buffer is full");
-    } catch (Exception e) {
-      // Expected
-    }
+    // Next send will block until timeout because buffer is full
+    sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{Integer.toString(1)}));
+
+    // Mailbox should be terminated due to timeout
+    assertTrue(sendingMailbox.isTerminated());
 
     // Data blocks will be cleaned up
     assertEquals(numCallbacks.get(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS + 1);
@@ -338,11 +340,10 @@ public class MailboxServiceTest {
     // Sends are non-blocking as long as channel capacity is not breached
     SendingMailbox sendingMailbox =
         _mailboxService2.getSendingMailbox("localhost", _mailboxService1.getPort(), mailboxId, Long.MAX_VALUE, _stats);
-    for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - 1; i++) {
+    for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS; i++) {
       sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{Integer.toString(i)}));
     }
     sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-    sendingMailbox.complete();
 
     // Wait until all the mails are delivered
     ReceivingMailbox receivingMailbox = _mailboxService1.getReceivingMailbox(mailboxId);
@@ -350,20 +351,18 @@ public class MailboxServiceTest {
     });
     TestUtils.waitForCondition(
         aVoid -> receivingMailbox.getNumPendingBlocks() == ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS, 1000L,
-        "Failed to deliver mails");
+        10000L, "Failed to deliver mails");
 
-    for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - 1; i++) {
+    for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS; i++) {
       assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i);
       List<Object[]> rows = getRows(receivingMailbox);
       assertEquals(rows.size(), 1);
       assertEquals(rows.get(0), new Object[]{Integer.toString(i)});
     }
-    assertEquals(receivingMailbox.getNumPendingBlocks(), 1);
+    assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
     MseBlock block = readBlock(receivingMailbox);
     assertNotNull(block);
     assertTrue(block.isSuccess());
-    assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
-    assertNull(receivingMailbox.poll());
   }
 
   @Test
@@ -388,24 +387,22 @@ public class MailboxServiceTest {
       sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{Integer.toString(i)}));
     }
     sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-    sendingMailbox.complete();
 
     // Wait until all the mails are delivered
-    receiveMailLatch.await();
+    assertTrue(receiveMailLatch.await(10000, TimeUnit.MILLISECONDS), "Timed out waiting for mailbox to receive");
     assertEquals(numCallbacks.get(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS);
 
     for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - 1; i++) {
-      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i);
+      assertEquals(receivingMailbox.getNumPendingBlocks(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS - i - 1);
       List<Object[]> rows = getRows(receivingMailbox);
       assertEquals(rows.size(), 1);
       assertEquals(rows.get(0), new Object[]{Integer.toString(i)});
     }
-    assertEquals(receivingMailbox.getNumPendingBlocks(), 1);
+    assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
     MseBlock block = readBlock(receivingMailbox);
     assertNotNull(block);
     assertTrue(block.isSuccess());
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
-    assertNull(receivingMailbox.poll());
   }
 
   @Test
@@ -427,7 +424,7 @@ public class MailboxServiceTest {
     sendingMailbox.cancel(new Exception("TEST ERROR"));
 
     // Wait until all the mails are delivered
-    receiveMailLatch.await();
+    assertTrue(receiveMailLatch.await(10000, TimeUnit.MILLISECONDS), "Timed out waiting for mailbox to receive");
     assertEquals(numCallbacks.get(), 2);
 
     // Data blocks will be cleaned up
@@ -461,7 +458,7 @@ public class MailboxServiceTest {
     sendingMailbox.cancel(new Exception("TEST ERROR"));
 
     // Wait until cancellation is delivered
-    receiveMailLatch.await();
+    assertTrue(receiveMailLatch.await(10000, TimeUnit.MILLISECONDS), "Timed out waiting for mailbox to receive");
     assertEquals(numCallbacks.get(), 1);
 
     // Data blocks will be cleaned up
@@ -475,50 +472,6 @@ public class MailboxServiceTest {
     receivingMailbox.cancel();
     assertEquals(numCallbacks.get(), 1);
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
-  }
-
-  @Test
-  public void testRemoteCancelledBecauseResourceExhausted()
-    throws Exception {
-    PinotConfiguration config = new PinotConfiguration(
-      Collections.singletonMap(CommonConstants.MultiStageQueryRunner.KEY_OF_MAX_INBOUND_QUERY_DATA_BLOCK_SIZE_BYTES,
-        1));
-    var mailboxService3 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), config);
-    mailboxService3.start();
-    var mailboxService4 = new MailboxService("localhost", QueryTestUtils.getAvailablePort(), config);
-    mailboxService4.start();
-
-    String mailboxId = MailboxIdUtils.toMailboxId(_requestId++, SENDER_STAGE_ID, 0, RECEIVER_STAGE_ID, 0);
-    SendingMailbox sendingMailbox =
-      mailboxService4.getSendingMailbox("localhost", mailboxService3.getPort(), mailboxId, Long.MAX_VALUE, _stats);
-    ReceivingMailbox receivingMailbox = mailboxService3.getReceivingMailbox(mailboxId);
-    AtomicInteger numCallbacks = new AtomicInteger();
-    CountDownLatch receiveMailLatch = new CountDownLatch(1);
-    receivingMailbox.registeredReader(() -> {
-      numCallbacks.getAndIncrement();
-      receiveMailLatch.countDown();
-    });
-
-    // Send some large data
-    sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"longer-amount-of-data-than-server-expects"}));
-
-    // Wait until cancellation is delivered
-    receiveMailLatch.await();
-    assertEquals(numCallbacks.get(), 1);
-
-    // Assert that error block is returned from server.
-    assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
-    MseBlock block = readBlock(receivingMailbox);
-    assertNotNull(block);
-    assertTrue(block.isError());
-
-    assertTrue(block instanceof ErrorMseBlock);
-    ErrorMseBlock errorMseBlock = (ErrorMseBlock) block;
-    assertEquals(errorMseBlock.getErrorMessages().get(QueryErrorCode.QUERY_CANCELLATION),
-      "Cancelled by sender with exception: CANCELLED: client cancelled");
-
-    mailboxService3.shutdown();
-    mailboxService4.shutdown();
   }
 
   @Test
@@ -537,9 +490,9 @@ public class MailboxServiceTest {
 
     // Send one data block and then cancel
     sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"0"}));
-    receiveMailLatch.await();
+    assertTrue(receiveMailLatch.await(10000, TimeUnit.MILLISECONDS), "Timed out waiting for mailbox to receive");
     receivingMailbox.cancel();
-    assertEquals(numCallbacks.get(), 1);
+    assertEquals(numCallbacks.get(), 2);
 
     // Data blocks will be cleaned up
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
@@ -550,7 +503,7 @@ public class MailboxServiceTest {
     // Cancel is idempotent for both sending and receiving mailbox, so safe to call multiple times
     sendingMailbox.cancel(new Exception("TEST ERROR"));
     receivingMailbox.cancel();
-    assertEquals(numCallbacks.get(), 1);
+    assertEquals(numCallbacks.get(), 2);
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
   }
 
@@ -569,26 +522,20 @@ public class MailboxServiceTest {
       receiveMailLatch.countDown();
     });
 
-    // Send one data block, RPC will timeout after deadline
+    // Send one data block, receiver will time out after deadline
     sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"0"}));
     Thread.sleep(deadlineMs - System.currentTimeMillis() + 10);
-    receiveMailLatch.await();
+    assertTrue(receiveMailLatch.await(10000, TimeUnit.MILLISECONDS), "Timed out waiting for mailbox to receive");
     assertEquals(numCallbacks.get(), 2);
-    // TODO: Currently we cannot differentiate early termination vs stream error
-    assertTrue(sendingMailbox.isTerminated());
-//    try {
-//      sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{1}));
-//      fail("Expect exception when sending data after timing out");
-//    } catch (Exception e) {
-//      // Expected
-//    }
-//    assertEquals(numCallbacks.get(), 2);
 
     // Data blocks will be cleaned up
     assertEquals(receivingMailbox.getNumPendingBlocks(), 0);
     MseBlock block = readBlock(receivingMailbox);
     assertNotNull(block);
     assertTrue(block.isError());
+
+    // Sender side should be terminated after receiver side times out and closes the connection
+    TestUtils.waitForCondition(aVoid -> sendingMailbox.isTerminated(), 1000L, "Failed to terminate sender");
 
     // Cancel is idempotent for both sending and receiving mailbox, so safe to call multiple times
     sendingMailbox.cancel(new Exception("TEST ERROR"));
@@ -601,9 +548,12 @@ public class MailboxServiceTest {
   public void testRemoteBufferFull()
       throws Exception {
     String mailboxId = MailboxIdUtils.toMailboxId(_requestId++, SENDER_STAGE_ID, 0, RECEIVER_STAGE_ID, 0);
+    // The deadline is the budget for both delivering the first blocks and the buffer-full park that follows, and the
+    // test runs for roughly the full deadline, so it balances delivery headroom under load (e.g. parallel test forks
+    // on CI) against test run time.
+    long deadlineMs = System.currentTimeMillis() + 5000;
     SendingMailbox sendingMailbox =
-        _mailboxService2.getSendingMailbox("localhost", _mailboxService1.getPort(), mailboxId,
-            System.currentTimeMillis() + 1000, _stats);
+        _mailboxService2.getSendingMailbox("localhost", _mailboxService1.getPort(), mailboxId, deadlineMs, _stats);
     ReceivingMailbox receivingMailbox = _mailboxService1.getReceivingMailbox(mailboxId);
     AtomicInteger numCallbacks = new AtomicInteger();
     CountDownLatch receiveMailLatch = new CountDownLatch(ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS + 1);
@@ -612,18 +562,20 @@ public class MailboxServiceTest {
       receiveMailLatch.countDown();
     });
 
-    // send blocks big enough to avoid block combining in the sending side
-    // although fragile, this works because we know that outboundMax = inboundMax/2
-    String payload = new String(new char[MAX_DATA_BLOCK_SIZE / 3]).replace('\0', 'a');
-
     // Sends are non-blocking as long as channel capacity is not breached
     for (int i = 0; i < ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS; i++) {
-      sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{payload}));
+      sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"0"}));
     }
+    // Wait until the buffer is full before sending the next block, so that the remaining deadline is spent parked on
+    // the full buffer instead of racing the block delivery.
+    TestUtils.waitForCondition(
+        aVoid -> receivingMailbox.getNumPendingBlocks() == ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS, 10L, 10000L,
+        "Failed to deliver mails");
 
     // Next send will be blocked on the receiver side and cause exception after timeout
-    sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-    receiveMailLatch.await();
+    // We need to send a data block, given we don't block on EOS
+    sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"0"}));
+    assertTrue(receiveMailLatch.await(10000, TimeUnit.MILLISECONDS), "Timed out waiting for mailbox to receive");
     assertEquals(numCallbacks.get(), ReceivingMailbox.DEFAULT_MAX_PENDING_BLOCKS + 1);
 
     // Data blocks will be cleaned up
@@ -631,6 +583,9 @@ public class MailboxServiceTest {
     MseBlock block = readBlock(receivingMailbox);
     assertNotNull(block);
     assertTrue(block.isError());
+    // The error must come from the buffer-full timeout on the receiver side, not from the deadline cancelling the
+    // stream before the overflowing block is parked, which reports INTERNAL instead
+    assertEquals(((ErrorMseBlock) block).getErrorMessages().keySet(), Set.of(QueryErrorCode.EXECUTION_TIMEOUT));
 
     // Cancel is idempotent for both sending and receiving mailbox, so safe to call multiple times
     sendingMailbox.cancel(new Exception("TEST ERROR"));
@@ -668,7 +623,6 @@ public class MailboxServiceTest {
     sendingMailbox.send(OperatorTestUtil.block(DATA_SCHEMA, new Object[]{"0"}));
     // send a metadata block
     sendingMailbox.send(SuccessMseBlock.INSTANCE, MultiStageQueryStats.emptyStats(SENDER_STAGE_ID).serialize());
-    sendingMailbox.complete();
 
     // sending side should early terminate
     TestUtils.waitForCondition(aVoid -> sendingMailbox.isEarlyTerminated(), 1000L, "Failed to early-terminate sender");
@@ -678,8 +632,7 @@ public class MailboxServiceTest {
     ReceivingMailbox.MseBlockWithStats block = receivingMailbox.poll();
     assertNotNull(block);
     assertTrue(block.getBlock().isData());
-    List<Object[]> rows = ((MseBlock.Data) block.getBlock()).asRowHeap().getRows();
-    return rows;
+    return ((MseBlock.Data) block.getBlock()).asRowHeap().getRows();
   }
 
   @Nullable
