@@ -21,7 +21,6 @@ package org.apache.pinot.segment.local.segment.index.inverted;
 
 import com.google.common.base.Preconditions;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import javax.annotation.Nullable;
@@ -62,7 +61,7 @@ public class InvertedIndexType
     extends AbstractIndexType<IndexConfig, InvertedIndexReader, DictionaryBasedInvertedIndexCreator> {
   public static final String INDEX_DISPLAY_NAME = "inverted";
   private static final List<String> EXTENSIONS =
-      Collections.singletonList(V1Constants.Indexes.BITMAP_INVERTED_INDEX_FILE_EXTENSION);
+      List.of(V1Constants.Indexes.BITMAP_INVERTED_INDEX_FILE_EXTENSION);
 
   protected InvertedIndexType() {
     super(StandardIndexes.INVERTED_ID);
@@ -150,19 +149,31 @@ public class InvertedIndexType
     return new InvertedIndexHandler(segmentDirectory, configsByCol, tableConfig, schema);
   }
 
+  @Override
+  public boolean requiresDictionary(FieldSpec fieldSpec, IndexConfig indexConfig) {
+    // Inverted index posting lists are keyed by dictionary IDs; an enabled inverted index always requires a
+    // dictionary.
+    return true;
+  }
+
+  @Override
+  public boolean shouldInvalidateOnDictionaryChange(FieldSpec fieldSpec, IndexConfig indexConfig) {
+    // Inverted index references dictionary IDs; enabling/disabling the dictionary changes whether the index can
+    // exist at all and (for shared-dict columns) the format on disk.
+    return true;
+  }
+
   public static class ReaderFactory implements IndexReaderFactory<InvertedIndexReader> {
     public static final ReaderFactory INSTANCE = new ReaderFactory();
 
     private ReaderFactory() {
     }
 
-    /**
-     * Creates a {@link InvertedIndexReader}.
-     *
-     * Unless {@link #createSkippingForward(SegmentDirectory.Reader, ColumnMetadata)}, this method first try to use the
-     * forward index reader in case it is also an inverted index. That is the case, for example, when the column is
-     * sorted and single value.
-     */
+    /// Creates a [InvertedIndexReader].
+    ///
+    /// Unless [#createSkippingForward(SegmentDirectory.Reader, ColumnMetadata)], this method first try to use the
+    /// forward index reader in case it is also an inverted index. That is the case, for example, when the column is
+    /// sorted and single value.
     @Override
     public InvertedIndexReader createIndexReader(SegmentDirectory.Reader segmentReader,
         FieldIndexConfigs fieldIndexConfigs, ColumnMetadata metadata)
@@ -184,12 +195,10 @@ public class InvertedIndexType
       }
     }
 
-    /**
-     * Directly creates a {@link InvertedIndexReader}.
-     *
-     * Unless {@link #createIndexReader}, this method always tries to create the actual inverted index reader instead of
-     * try to use the forward index when the column is sorted and single value.
-     */
+    /// Directly creates a [InvertedIndexReader].
+    ///
+    /// Unless [#createIndexReader], this method always tries to create the actual inverted index reader instead
+    /// of try to use the forward index when the column is sorted and single value.
     public InvertedIndexReader createSkippingForward(SegmentDirectory.Reader segmentReader, ColumnMetadata metadata)
         throws IOException {
       if (!metadata.hasDictionary()) {
