@@ -36,9 +36,7 @@ import org.slf4j.LoggerFactory;
 import static org.apache.pinot.spi.utils.CommonConstants.Server.*;
 
 
-/**
- * The config used for HelixInstanceDataManager.
- */
+/// The config used for HelixInstanceDataManager.
 public class HelixInstanceDataManagerConfig implements InstanceDataManagerConfig {
   private static final Logger LOGGER = LoggerFactory.getLogger(HelixInstanceDataManagerConfig.class);
 
@@ -99,6 +97,15 @@ public class HelixInstanceDataManagerConfig implements InstanceDataManagerConfig
   //       it is possible that the query latencies increase during that period.
   //
   public static final String MAX_PARALLEL_REFRESH_THREADS = "max.parallel.refresh.threads";
+
+  // Whether to process SEGMENT_REFRESH in a synchronous or asynchronous manner when the messaged is received.
+  // Defaults to false, meaning SEGMENT_REFRESH will be processed in a synchronous manner.
+  public static final String ENABLE_ASYNC_SEGMENT_REFRESH = "enable.async.segment.refresh";
+  private static final boolean DEFAULT_ENABLE_ASYNC_SEGMENT_REFRESH = false;
+
+  // Whether to disable preloading for dimension tables. Preload Enabled by default.
+  public static final String DISABLE_DIMENSION_TABLE_PRELOAD = "disable.dimension.table.preload";
+  private static final boolean DEFAULT_DISABLE_DIMENSION_TABLE_PRELOAD = false;
 
   // To preload segments of table using upsert in parallel for fast upsert metadata recovery.
   private static final String MAX_SEGMENT_PRELOAD_THREADS = "max.segment.preload.threads";
@@ -161,7 +168,7 @@ public class HelixInstanceDataManagerConfig implements InstanceDataManagerConfig
     // Tier names are defined by pinot.server.instance.tierConfigs.tierNames = tierA,tierB
     // Specific configs for a tier are like pinot.server.instance.tierConfigs.tierA.someKey = someValue
     PinotConfiguration tierConfigs = getConfig().subset(TIER_CONFIGS_PREFIX);
-    List<String> tierNames = tierConfigs.getProperty(TIER_NAMES, Collections.emptyList());
+    List<String> tierNames = tierConfigs.getProperty(TIER_NAMES, List.of());
     for (String tierName : tierNames) {
       Map<String, String> mergedProps = new HashMap<>(unmodifiableDefaultTierProperties);
       tierConfigs.subset(tierName).toMap().forEach((k, v) -> mergedProps.put(k, String.valueOf(v)));
@@ -253,6 +260,11 @@ public class HelixInstanceDataManagerConfig implements InstanceDataManagerConfig
   }
 
   @Override
+  public boolean isAsyncSegmentRefreshEnabled() {
+    return _serverConfig.getProperty(ENABLE_ASYNC_SEGMENT_REFRESH, DEFAULT_ENABLE_ASYNC_SEGMENT_REFRESH);
+  }
+
+  @Override
   public int getMaxSegmentPreloadThreads() {
     return _serverConfig.getProperty(MAX_SEGMENT_PRELOAD_THREADS, 0);
   }
@@ -338,5 +350,11 @@ public class HelixInstanceDataManagerConfig implements InstanceDataManagerConfig
   @Override
   public boolean shouldCheckCRCOnSegmentLoad() {
     return _serverConfig.getProperty(CHECK_CRC_ON_SEGMENT_LOAD, DEFAULT_CHECK_CRC_ON_SEGMENT_LOAD);
+  }
+
+  @Override
+  public boolean isDimensionTablePreloadDisabled() {
+    return _serverConfig.getProperty(DISABLE_DIMENSION_TABLE_PRELOAD,
+        DEFAULT_DISABLE_DIMENSION_TABLE_PRELOAD);
   }
 }
