@@ -19,10 +19,10 @@
 package org.apache.pinot.server.api;
 
 import java.io.File;
+import java.io.InputStream;
 import java.net.URI;
-import java.net.URL;
+import java.nio.file.Files;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -46,6 +46,7 @@ import org.apache.pinot.segment.local.segment.creator.SegmentTestUtils;
 import org.apache.pinot.segment.local.segment.creator.impl.SegmentIndexCreationDriverImpl;
 import org.apache.pinot.segment.local.utils.SegmentLocks;
 import org.apache.pinot.segment.local.utils.SegmentReloadSemaphore;
+import org.apache.pinot.segment.local.utils.ServerReloadJobStatusCache;
 import org.apache.pinot.segment.spi.ImmutableSegment;
 import org.apache.pinot.segment.spi.creator.SegmentGeneratorConfig;
 import org.apache.pinot.segment.spi.creator.SegmentIndexCreationDriver;
@@ -71,33 +72,32 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import static org.testng.Assert.assertNotNull;
-import static org.testng.Assert.assertTrue;
 
 
 public abstract class BaseResourceTest {
-  protected String getAvroFileName() {
-    return "data/test_data-mv.avro";
-  }
-
-  private static final File TEMP_DIR = new File(FileUtils.getTempDirectory(), "BaseResourceTest");
-  protected static final String TABLE_NAME = "testTable";
+  protected static final String RAW_TABLE_NAME = "testTable";
+  protected static final String REALTIME_TABLE_NAME = TableNameBuilder.REALTIME.tableNameWithType(RAW_TABLE_NAME);
+  protected static final String OFFLINE_TABLE_NAME = TableNameBuilder.OFFLINE.tableNameWithType(RAW_TABLE_NAME);
   protected static final String LLC_SEGMENT_NAME_FOR_UPLOAD_SUCCESS =
-      new LLCSegmentName(TableNameBuilder.REALTIME.tableNameWithType(TABLE_NAME), 1, 0,
-          System.currentTimeMillis()).getSegmentName();
+      new LLCSegmentName(REALTIME_TABLE_NAME, 1, 0, System.currentTimeMillis()).getSegmentName();
   protected static final String LLC_SEGMENT_NAME_FOR_UPLOAD_FAILURE =
-      new LLCSegmentName(TableNameBuilder.REALTIME.tableNameWithType(TABLE_NAME), 2, 0,
-          System.currentTimeMillis()).getSegmentName();
+      new LLCSegmentName(REALTIME_TABLE_NAME, 2, 0, System.currentTimeMillis()).getSegmentName();
   protected static final String SEGMENT_DOWNLOAD_URL =
-      StringUtil.join("/", "hdfs://root", TABLE_NAME, LLC_SEGMENT_NAME_FOR_UPLOAD_SUCCESS);
+      StringUtil.join("/", "hdfs://root", RAW_TABLE_NAME, LLC_SEGMENT_NAME_FOR_UPLOAD_SUCCESS);
 
-  private final Map<String, TableDataManager> _tableDataManagerMap = new HashMap<>();
+  protected final Map<String, TableDataManager> _tableDataManagerMap = new HashMap<>();
   protected final List<ImmutableSegment> _realtimeIndexSegments = new ArrayList<>();
   protected final List<ImmutableSegment> _offlineIndexSegments = new ArrayList<>();
+  protected File _tempDir;
   protected File _avroFile;
   protected AdminApiApplication _adminApiApplication;
   protected WebTarget _webTarget;
   protected String _instanceId;
   protected ServerInstance _serverInstance;
+
+  protected String getAvroFileName() {
+    return "data/test_data-mv.avro";
+  }
 
   @SuppressWarnings("SuspiciousMethodCalls")
   @BeforeClass
@@ -105,11 +105,16 @@ public abstract class BaseResourceTest {
       throws Exception {
     ServerMetrics.register(mock(ServerMetrics.class));
 
-    FileUtils.deleteQuietly(TEMP_DIR);
-    assertTrue(TEMP_DIR.mkdirs());
-    URL resourceUrl = getClass().getClassLoader().getResource(getAvroFileName());
-    assertNotNull(resourceUrl);
-    _avroFile = new File(resourceUrl.getFile());
+    _tempDir = Files.createTempDirectory(getClass().getSimpleName() + "-").toFile();
+    // Copy the Avro fixture out of the classpath into the temp directory so it is always backed by a real file.
+    // The fixture may be served from a packaged test-jar when this base class is reused from another
+    // module, in which case it cannot be opened as a plain File via the resource URL.
+    String avroFileName = getAvroFileName();
+    _avroFile = new File(_tempDir, new File(avroFileName).getName());
+    try (InputStream avroStream = getClass().getClassLoader().getResourceAsStream(avroFileName)) {
+      assertNotNull(avroStream);
+      FileUtils.copyInputStreamToFile(avroStream, _avroFile);
+    }
 
     // Mock the instance data manager
     InstanceDataManager instanceDataManager = mock(InstanceDataManager.class);
@@ -122,7 +127,7 @@ public abstract class BaseResourceTest {
     when(_serverInstance.getServerMetrics()).thenReturn(mock(ServerMetrics.class));
     when(_serverInstance.getInstanceDataManager()).thenReturn(instanceDataManager);
     when(_serverInstance.getInstanceDataManager().getSegmentFileDirectory()).thenReturn(
-        FileUtils.getTempDirectoryPath());
+        _tempDir.getAbsolutePath());
 
     // Create a single HelixManager mock with proper segment data
     HelixManager helixManager = mock(HelixManager.class);
@@ -141,13 +146,10 @@ public abstract class BaseResourceTest {
     when(instanceDataManager.getSegmentUploader()).thenReturn(segmentUploader);
 
     // Add the default tables and segments.
-    String realtimeTableName = TableNameBuilder.REALTIME.tableNameWithType(TABLE_NAME);
-    String offlineTableName = TableNameBuilder.OFFLINE.tableNameWithType(TABLE_NAME);
-
-    addTable(realtimeTableName);
-    addTable(offlineTableName);
-    setUpSegment(realtimeTableName, null, "default", _realtimeIndexSegments);
-    setUpSegment(offlineTableName, null, "default", _offlineIndexSegments);
+    addTable(REALTIME_TABLE_NAME);
+    addTable(OFFLINE_TABLE_NAME);
+    setUpSegment(REALTIME_TABLE_NAME, null, "default", _realtimeIndexSegments);
+    setUpSegment(OFFLINE_TABLE_NAME, null, "default", _offlineIndexSegments);
 
     PinotConfiguration serverConf = new PinotConfiguration();
     String hostname = serverConf.getProperty(CommonConstants.Helix.KEY_OF_SERVER_NETTY_HOST,
@@ -157,13 +159,20 @@ public abstract class BaseResourceTest {
         CommonConstants.Helix.DEFAULT_SERVER_NETTY_PORT);
     _instanceId = CommonConstants.Helix.PREFIX_OF_SERVER_INSTANCE + hostname + "_" + port;
     serverConf.setProperty(CommonConstants.Server.CONFIG_OF_INSTANCE_ID, _instanceId);
-    _adminApiApplication = new AdminApiApplication(_serverInstance, new AllowAllAccessFactory(), serverConf);
-    _adminApiApplication.start(Collections.singletonList(
-        new ListenerConfig(CommonConstants.HTTP_PROTOCOL, "0.0.0.0", CommonConstants.Server.DEFAULT_ADMIN_API_PORT,
+    configureServerConf(serverConf);
+    _adminApiApplication = new AdminApiApplication(_serverInstance, new AllowAllAccessFactory(),
+        mock(ServerReloadJobStatusCache.class),
+        serverConf);
+    _adminApiApplication.start(List.of(
+        new ListenerConfig(CommonConstants.HTTP_PROTOCOL, "0.0.0.0", 0,
             CommonConstants.HTTP_PROTOCOL, new TlsConfig(), HttpServerThreadPoolConfig.defaultInstance())));
 
+    int adminApiPort = _adminApiApplication.getHttpServer().getListeners().iterator().next().getPort();
     _webTarget = ClientBuilder.newClient().target(
-        String.format("http://%s:%d", NetUtils.getHostAddress(), CommonConstants.Server.DEFAULT_ADMIN_API_PORT));
+        String.format("http://%s:%d", NetUtils.getHostAddress(), adminApiPort));
+  }
+
+  protected void configureServerConf(PinotConfiguration serverConf) {
   }
 
   @AfterClass
@@ -177,7 +186,7 @@ public abstract class BaseResourceTest {
       immutableSegment.offload();
       immutableSegment.destroy();
     }
-    FileUtils.deleteQuietly(TEMP_DIR);
+    FileUtils.deleteQuietly(_tempDir);
   }
 
   protected List<ImmutableSegment> setUpSegments(String tableNameWithType, int numSegments,
@@ -185,8 +194,7 @@ public abstract class BaseResourceTest {
       throws Exception {
     List<ImmutableSegment> immutableSegments = new ArrayList<>();
     for (int i = 0; i < numSegments; i++) {
-      immutableSegments.add(
-          setUpSegment(tableNameWithType, null, Integer.toString(_realtimeIndexSegments.size()), segments));
+      immutableSegments.add(setUpSegment(tableNameWithType, null, Integer.toString(segments.size()), segments));
     }
     return immutableSegments;
   }
@@ -194,11 +202,18 @@ public abstract class BaseResourceTest {
   protected ImmutableSegment setUpSegment(String tableNameWithType, String segmentName, String segmentNamePostfix,
       List<ImmutableSegment> segments)
       throws Exception {
-    File tableDataDir = new File(TEMP_DIR, tableNameWithType);
+    return setUpSegment(tableNameWithType, segmentName, segmentNamePostfix, segments, false);
+  }
+
+  protected ImmutableSegment setUpSegment(String tableNameWithType, String segmentName, String segmentNamePostfix,
+      List<ImmutableSegment> segments, boolean compressionStatsEnabled)
+      throws Exception {
+    File tableDataDir = new File(_tempDir, tableNameWithType);
     SegmentGeneratorConfig config =
         SegmentTestUtils.getSegmentGeneratorConfigWithoutTimeColumn(_avroFile, tableDataDir, tableNameWithType);
     config.setSegmentName(segmentName);
     config.setSegmentNamePostfix(segmentNamePostfix);
+    config.setCompressionStatsEnabled(compressionStatsEnabled);
     SegmentIndexCreationDriver driver = new SegmentIndexCreationDriverImpl();
     driver.init(config);
     driver.build();
@@ -211,7 +226,7 @@ public abstract class BaseResourceTest {
 
   protected void addTable(String tableNameWithType) {
     InstanceDataManagerConfig instanceDataManagerConfig = mock(InstanceDataManagerConfig.class);
-    when(instanceDataManagerConfig.getInstanceDataDir()).thenReturn(TEMP_DIR.getAbsolutePath());
+    when(instanceDataManagerConfig.getInstanceDataDir()).thenReturn(_tempDir.getAbsolutePath());
     when(instanceDataManagerConfig.getInstanceId()).thenReturn("Server_1_100.89.121.12");
     TableType tableType = TableNameBuilder.getTableTypeFromTableName(tableNameWithType);
     assertNotNull(tableType);
@@ -225,8 +240,18 @@ public abstract class BaseResourceTest {
     // NOTE: Use OfflineTableDataManager for both OFFLINE and REALTIME table because RealtimeTableDataManager performs
     //       more checks
     TableDataManager tableDataManager = new OfflineTableDataManager();
-    tableDataManager.init(instanceDataManagerConfig, helixManager, new SegmentLocks(), tableConfig, schema,
-        new SegmentReloadSemaphore(1), Executors.newSingleThreadExecutor(), null, null, null);
+    tableDataManager.init(instanceDataManagerConfig,
+        helixManager,
+        new SegmentLocks(),
+        tableConfig,
+        schema,
+        new SegmentReloadSemaphore(1),
+        Executors.newSingleThreadExecutor(),
+        null,
+        null,
+        null,
+        false,
+        mock(ServerReloadJobStatusCache.class));
     tableDataManager.start();
     _tableDataManagerMap.put(tableNameWithType, tableDataManager);
   }
