@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.spi.config;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -40,7 +39,7 @@ public class ConfigUtilsTest {
   @Test
   public void testIndexing() {
     Map<String, String> environment =
-        ImmutableMap.of("LOAD_MODE", "MMAP", "AWS_ACCESS_KEY", "default_aws_access_key", "AWS_SECRET_KEY",
+        Map.of("LOAD_MODE", "MMAP", "AWS_ACCESS_KEY", "default_aws_access_key", "AWS_SECRET_KEY",
             "default_aws_secret_key");
     testIndexingWithConfig(environment);
   }
@@ -55,6 +54,35 @@ public class ConfigUtilsTest {
     System.clearProperty("LOAD_MODE");
     System.clearProperty("AWS_ACCESS_KEY");
     System.clearProperty("AWS_SECRET_KEY");
+  }
+
+  @Test
+  public void testEscapedConfigReferenceIsPreserved() {
+    IndexingConfig indexingConfig = new IndexingConfig();
+    Map<String, String> streamConfigMap = new HashMap<>();
+    streamConfigMap.put("ssl.keystore.password", "$${file:/vault/secrets/kafka.properties:keystore.password}");
+    streamConfigMap.put("ssl.truststore.password", "${PINOT_KAFKA_TRUSTSTORE_PASSWORD:fallback}");
+    indexingConfig.setStreamConfigs(streamConfigMap);
+
+    IndexingConfig resolvedConfig =
+        ConfigUtils.applyConfigWithEnvVariablesAndSystemProperties(Map.of(), indexingConfig);
+
+    assertEquals(resolvedConfig.getStreamConfigs().get("ssl.keystore.password"),
+        "${file:/vault/secrets/kafka.properties:keystore.password}");
+    assertEquals(resolvedConfig.getStreamConfigs().get("ssl.truststore.password"), "fallback");
+  }
+
+  @Test
+  public void testEscapedAndUnescapedConfigReferences() {
+    IndexingConfig indexingConfig = new IndexingConfig();
+    indexingConfig.setStreamConfigs(
+        Map.of("escaped", "$${file:fallback}", "unescaped", "${file:fallback}"));
+
+    IndexingConfig resolvedConfig =
+        ConfigUtils.applyConfigWithEnvVariablesAndSystemProperties(Map.of(), indexingConfig);
+
+    assertEquals(resolvedConfig.getStreamConfigs().get("escaped"), "${file:fallback}");
+    assertEquals(resolvedConfig.getStreamConfigs().get("unescaped"), "fallback");
   }
 
   private void testIndexingWithConfig(Map<String, String> configOverride) {
@@ -79,7 +107,7 @@ public class ConfigUtilsTest {
     String streamType = "fakeStream";
     String topic = "fakeTopic";
     String tableName = "fakeTable_REALTIME";
-    String defaultConsumerFactoryClass = "org.apache.pinot.plugin.stream.kafka20.StreamConsumerFactory";
+    String defaultConsumerFactoryClass = "org.apache.pinot.plugin.stream.kafka30.StreamConsumerFactory";
     String defaultDecoderClass = "org.apache.pinot.plugin.inputformat.avro.KafkaAvroMessageDecoder";
 
     String consumerFactoryClass = "${CONSUMER_FACTORY_CLASS:" + defaultConsumerFactoryClass + "}";
